# playwright-python

./: .gitignore  README.md  SAMPLE.md  conftest.py  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: ci.yml
pages/: account_overview_page.py  parabank_login_page.py  transfer_funds_page.py
tests/: test_parabank_login.py  test_parabank_overview.py
utils/: config.py
