[metadata]
name = playwright-automation

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,venv,.venv,build,dist,reports
max-complexity = 10

[mypy]
python_version = 3.11
ignore_missing_imports = True
warn_return_any = True
warn_unused_configs = True
check_untyped_defs = True
disallow_untyped_defs = False

[isort]
profile = black
line_length = 88
